--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-core</artifactId>
-			<version>1.3</version>
+			<version>${hamcrest.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
+			<version>${hamcrest.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -40,4 +40,7 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
+	<properties>
+		<hamcrest.version>1.3</hamcrest.version>
+	</properties>
 </project>
