--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
 					<noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
 					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
 					<branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+					<merge>true</merge>
 					<includes>
 						<include>**/*</include>
 					</includes>
