--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 target/
 test-output/
 .classpath
-.settings/org.eclipse.jdt.core.prefs
-.settings/org.eclipse.m2e.core.prefs
-reports/*
+.settings/
+reports/
