--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
                     <showWarnings>true</showWarnings>
                     <source>1.6</source>
                     <target>1.6</target>
-                    <compilerArgument>-proc:none</compilerArgument>
+                    <useIncrementalCompilation>false</useIncrementalCompilation>
                 </configuration>
             </plugin>
             <plugin>
