--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <name>ResourceBundleStore</name>
     <description>tbc</description>
 
+   <licenses>
+      <license>
+         <name>The Apache Software License, Version 2.0</name>
+         <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+         <distribution>repo</distribution>
+      </license>
+   </licenses>
+
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
