--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,19 @@
     <name>ResourceBundleStore</name>
     <description>tbc</description>
 
+    <scm>
+        <connection>scm:git:git@github.com:poblish/resourceBundleStore.git</connection>
+        <developerConnection>scm:git:git@github.com:poblish/resourceBundleStore.git</developerConnection>
+        <url>git@github.com:poblish/resourceBundleStore.git</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <url>https://github.com/poblish/resourceBundleStore</url>
+    <organization>
+        <url>https://github.com/poblish/</url>
+        <name>Hiatus</name>
+    </organization>
+
    <licenses>
       <license>
          <name>The Apache Software License, Version 2.0</name>
