--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.hiatus</groupId>
     <artifactId>resourceBundleStore</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <name>ResourceBundleStore</name>
     <description>tbc</description>
 
